# FRC2026

./: .gitignore  README.md  Team4533-License.md  build.gradle  compile_times.py  elastic-layout-2026.json  settings.gradle  simgui-ds.json
.github/workflows/: main.yml
aegis/: main.py  numain.py  robot_tracker.py  scouting.py  shot_tracker.py  trackmain.py  trythree.py
aegis/scouting_reports/: team254_20260510_213928.json  team254_20260511_085909.json  team254_20260511_091144.json  team254_20260511_231440.json  team254_20260511_232609.json  team254_20260511_233203.json  team254_20260511_233546.json  team254_20260511_234304.json  team254_20260512_101905.json  team254_20260512_104404.json  team254_20260512_104603.json  team254_20260512_190734.json  team254_20260512_191330.json  team254_20260512_191504.json  team254_20260512_192451.json  team254_20260512_193405.json  team254_20260512_193553.json  team254_20260512_194005.json  team254_20260512_194409.json  team254_20260512_194939.json  team254_20260512_195141.json  team254_20260512_195331.json  team254_20260512_195720.json  team254_20260512_202501.json  team254_20260513_104456.json  team254_20260517_201402.json  team254_20260517_205843.json  team254_20260517_210123.json  team254_20260517_210727.json
aegis/templates/: index.html
ascope-layouts/: README.md  driver-practice.json
buildSrc/: build.gradle
buildSrc/src/main/java/org/frc5572/: BuildConstantsGen.java
coprocessor/: README.md  coprocessor.service  debug.py  main.py  requirements.txt
coprocessor/gtsam/: CMakeLists.txt
coprocessor/gtsam/src/: localizer.hh  main.cc  server.hh
coprocessor/jetson/: coprocessor.service  enable-service.sh  setup.sh
coprocessor/jetson/gtsam_D/src/: main.cc  numain.cc  whacknet.cc  whacknet.hh
coprocessor/mac/gtsam_D/: CMakelists.txt  readme.md
coprocessor/mac/gtsam_D/src/: crowtest.cc  httplib.hh  index.html  numain.cc  robot_localizer.cc  robot_locallizer.hh  whacknet.cc  whacknet.hh
coprocessor/mac/metal/: apriltag.metal
processor/: build.gradle
robot/: build.gradle
robot/src/main/deploy/: elastic-layout.json
robot/src/main/deploy/choreo/: LeftSidewinder.traj  LeftSidewinderRamp.traj  autos.chor
robot/src/main/deploy/scripts/: NT4.js  msgpack.js
robot/vendordeps/: SleipnirJava.json
src/main/deploy/: elastic-layout.json  index.html
src/main/deploy/choreo/: LeftJab.traj  LeftSideGatherShoot.traj  LeftSweep.traj  NewPath.traj  Pass.traj  PassAuto.chor  PassThenClimb.traj  autos.chor  passThenClimb.chor  peashooter.traj
src/main/deploy/scripts/: .gitignore
src/main/deploy/shotdata/: index.html
src/main/java/frc/robot/: AutoCommandFactory.java  BuildConstants.java  CommandFactory.java  Constants.java  FieldConstants.java  Main.java  NuState.java  Robot.java  RobotContainer.java  RobotState.java  ShotData.java
tech-binder/: index.html  print.html
vendordeps/: photonlib.json
(+213 files in other folders)
